--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.0.6",
     "next": "15.1.6",
     "next-themes": "^0.2.1",
